# chocolate-store

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md
.cursor/: BUGBOT.md  hooks.json
.cursor/agents/: architecture-diagram.md  backend-security-scanner.md  frontend-a11y-scanner.md
.cursor/commands/: create-pd-incident.md  get-pd-incidents.md
.cursor/hooks/: pre-commit-review.sh  review-local-changes-worker.sh  scrub-sensitive-prompt.py  test-scrub-sensitive-prompt.py
.cursor/rules/: plan-before-building.mdc
.cursor/skills/backend-api-test-coverage/: SKILL.md
.cursor/skills/pagerduty-anina-workflows/: SKILL.md
.cursor/skills/pagerduty-mcp-anina-setup/: SKILL.md
.cursor/skills/review-local-changes/: SKILL.md
.cursor/skills/sync-seed-with-schema/: SKILL.md
.github/workflows/: ci.yml
backend/: Cargo.toml  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init.py
backend/app/: __init__.py  cache.py  config.py  db.py  deps.py  init_db.py  init_mongo.py  main.py  mongo.py  seed.py  vulnerability_scanner_demo.py
backend/app/documents/: __init__.py  chocolate.py
backend/app/models/: __init__.py  chocolate.py  social.py
backend/app/repositories/: __init__.py  chocolates.py  factory.py  orders.py
backend/app/routers/: admin.py  checkout.py  chocolates.py  security_validation.py  social.py
backend/app/schemas/: chocolate.py  social.py
backend/scripts/: __init__.py  backfill_mongo.py  reconcile.py
backend/src/: cache.rs  config.rs  db.rs  dto.rs  error.rs  init_db_lib.rs  lib.rs  main.rs  models.rs  openapi.rs  schema.rs  schema.sql  seed.rs
backend/src/routes/: checkout.rs  chocolates.rs  health.rs  mod.rs
backend/tests/: api_integration.rs  checkout.rs  checkout_api_test.rs  chocolates.rs  chocolates_api_test.rs  conftest.py  health.rs  health_test.rs  openapi_test.rs  test_admin_api.py  test_checkout_api.py  test_chocolates_api.py  test_dual_write.py  test_health.py  test_imports.py  test_social_api.py
backend/tests/common/: mod.rs
docs/: RUST_SCRIPT_MIGRATION.md  frontend-accessibility-audit.md  rust-backend-migration-plan.md  rust-migration-plan.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/__tests__/: a11y.test.tsx
frontend/src/app/: globals.css  home-page-client.tsx  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/dev-mode/agent/: route.test.ts  route.ts
frontend/src/app/api/dev-mode/agent/send/: route.test.ts  route.ts
frontend/src/app/cart/: cart-page-client.tsx  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/checkout/: checkout-page-client.tsx  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/checkout/success/: layout.tsx  page.tsx  success-page-client.tsx
frontend/src/app/feed/: page.tsx
frontend/src/app/feed/[id]/: page.tsx
frontend/src/app/moderation/: page.tsx
frontend/src/app/profiles/[id]/: page.tsx
frontend/src/app/saved/: layout.tsx  page.test.tsx  page.tsx  saved-page-client.tsx
frontend/src/app/shop/: layout.tsx  page.tsx  shop-page-client.tsx
frontend/src/app/shop/[id]/: layout.tsx  page.tsx  product-detail-client.tsx
frontend/src/components/: AddToCartControl.test.tsx  AddToCartControl.tsx  CartDrawer.test.tsx  CartDrawer.tsx  ChocolateCard.test.tsx  ChocolateCard.tsx  ChocolateImage.tsx  DevMode.test.tsx  DevMode.tsx  Header.test.tsx  Header.tsx  ShopTagPicker.test.tsx  ShopTagPicker.tsx  ThemeToggle.tsx  providers.tsx
frontend/src/components/social/: DemoUserPicker.tsx  PostCard.test.tsx  PostCard.tsx  PostComposer.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  sheet.tsx  sonner.tsx
frontend/src/context/: demo-user.tsx  dev-mode.tsx  shop-state.test.tsx  shop-state.tsx
frontend/src/lib/: api-server.ts  api.test.ts  api.ts  chocolate-catalog.test.ts  chocolate-catalog.ts  chocolate-queries.test.ts  chocolate-queries.ts  featured-chocolates.test.ts  featured-chocolates.ts  format.ts  types.ts
frontend/src/server/: dev-mode-agents.ts
frontend/src/test/: render.tsx  setup.ts
scripts/: bootstrap.sh  dev.sh  mongo-path.sh  nuke.sh  postgres-path.sh  reset-db.sh  services-down.sh  services-up.sh  stop.sh
