[package]
name = "chocolate-store-api"
version = "0.1.0"
edition = "2021"
description = "Axum backend for the chocolate store demo"
readme = "README.md"

[[bin]]
name = "chocolate-store-api"
path = "src/main.rs"

[[bin]]
name = "init_db"
path = "src/bin/init_db.rs"

[lib]
name = "chocolate_store_api"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
deunicode = "1"
url = "2"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tokio = { version = "1", features = ["full", "test-util"] }
