[project]
name = "chocolate-store-api"
version = "0.2.0"
description = "FastAPI backend for the chocolate store demo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "motor>=3.6.0",
  "pymongo>=4.10.0",
  "pydantic-settings>=2.6.0",
  "redis>=5.0.0",
  "email-validator>=2.2.0",
  "eval_type_backport>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
]

[tool.coverage.run]
source = ["app"]
branch = false
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
